Add homepage URL for Netlify

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-portfoliocd",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dazzling-axolotl-04d282.netlify.app/",  // ⬅️ Add this line 
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
