--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "my-portfoliocd",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dazzling-axolotl-04d282.netlify.app/",  // ⬅️ Add this line 
+  "homepage": "https://dazzling-axolotl-04d282.netlify.app/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "fs-extra": "^11.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
